--- a/sass/style.scss
+++ b/sass/style.scss
@@ -41,6 +41,7 @@ COMPOSANTES
 ANIMATION
 --------------------------------------------------------- */
 @import "animation/entete";
+@import"animation/baspage"; 
 /* ---------------------------------------------------------
 LAYOUT
 --------------------------------------------------------- */
