--- a/style.css
+++ b/style.css
@@ -450,7 +450,7 @@ COMPOSANTES
   padding: 0;
 }
 
-@media screen and (min-width: 800px) {
+@media screen and (min-width: 700px) {
   .formation__cours {
     width: 45%;
   }
@@ -493,10 +493,17 @@ COMPOSANTES
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
+    padding-left: 10px;
+  }
+  .site__header .site__header__titre {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
   }
 }
 
-.site__header__titre {
+.site__headerheader__titre {
   font-size: clamp(3rem, 1vw, 6rem);
   display: flex;
   align-items: center;
@@ -506,15 +513,14 @@ COMPOSANTES
 }
 
 @media screen and (max-width: 699px) {
-  .site__header__titre .logo__titre {
+  .site__headerheader__titre .logo__titre {
     display: flex;
     justify-content: center;
-    padding: 0;
   }
 }
 
 @media screen and (min-width: 700px) {
-  .site__header__titre {
+  .site__headerheader__titre {
     flex-wrap: nowrap;
   }
 }
@@ -525,9 +531,15 @@ COMPOSANTES
 }
 
 .header__description {
-  font-size: clamp(1.5rem, 1vw, 6rem);
+  font-size: clamp(0.8rem, 1vw, 6rem);
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  padding-right: 20px;
+  margin-left: 10px;
+}
+
+@media screen and (min-width: 700px) {
+  .header__description {
+    margin: 10px;
+  }
 }
 
 .util {
@@ -570,12 +582,12 @@ COMPOSANTES
   display: none;
 }
 
-.menu-principale-container {
-  display: none;
-}
-
 #chk-burger:checked ~ #burger {
   transform: rotate(90deg);
+}
+
+.menu-principale-container {
+  display: none;
 }
 
 #chk-burger:checked ~ .menu-principale-container {
@@ -607,18 +619,21 @@ COMPOSANTES
   background-color: #2832b8;
 }
 
-@media screen and (min-width: 800px) {
+@media screen and (min-width: 700px) {
   .site #burger {
     display: none;
   }
-  .site .menu-principal-container {
+  .site .menu-principale-container {
     display: block;
   }
   .home #burger {
     display: block;
   }
-  .home .menu-principal-container {
+  .home .menu-principale-container {
     display: none;
+  }
+  .home #chk-burger:checked ~ .menu-principale-container {
+    display: block;
   }
 }
 
@@ -831,6 +846,41 @@ ANIMATION
   }
 }
 
+/*---------------Animation Icon------------------*/
+.site__footer .wp-block-social-link {
+  animation: animHotel 3s infinite;
+}
+
+.site__header .wp-social-link-github {
+  animation-name: animAvion;
+}
+
+/* Animation Hotel*/
+@keyframes animHotel {
+  0%,
+  10% {
+    transform: rotateX(0deg);
+  }
+  100% {
+    transform: rotateX(360deg);
+  }
+}
+
+@keyframes animAvion {
+  from {
+    transform: translateY(-5vh) scale(0.9, 1.1);
+    animation-timing-function: cubic-bezier(0.725, 0, 1, 0.685);
+  }
+  93% {
+    transform: translateY(7vh) scale(1, 1);
+    animation-timing-function: cubic-bezier(0, 0.685, 0.725, 1);
+  }
+  to {
+    transform: translateY(7vh) scale(1.3, 0.7);
+    color: orange;
+  }
+}
+
 /* ---------------------------------------------------------
 LAYOUT
 --------------------------------------------------------- */
@@ -886,7 +936,7 @@ LAYOUT
   z-index: -1;
 }
 
-@media screen and (min-width: 800px) {
+@media screen and (min-width: 700px) {
   .site {
     grid-template-columns: auto 300px;
     grid-template-areas: "header header" " main sidebar" "footer footer";
