--- a/sass/animation/_baspage.scss
+++ b/sass/animation/_baspage.scss
@@ -2,8 +2,8 @@
 .site__footer .wp-block-social-link {
     animation: animHotel 3s infinite;
 }
-.site__header .wp-social-link-github{
-animation-name: animAvion;
+#block-15 li{
+animation: animAvion 3s infinite;
 }
 
 
@@ -31,6 +31,6 @@ animation-name: animAvion;
 
     to {
         transform: translateY(7vh) scale(1.3, 0.7);
-        color: orange
+        
     }
 }
