--- a/style.css
+++ b/style.css
@@ -851,8 +851,8 @@ ANIMATION
   animation: animHotel 3s infinite;
 }
 
-.site__header .wp-social-link-github {
-  animation-name: animAvion;
+#block-15 li {
+  animation: animAvion 3s infinite;
 }
 
 /* Animation Hotel*/
@@ -877,7 +877,6 @@ ANIMATION
   }
   to {
     transform: translateY(7vh) scale(1.3, 0.7);
-    color: orange;
   }
 }
 
