--- a/sass/composantes/_header.scss
+++ b/sass/composantes/_header.scss
@@ -6,18 +6,21 @@
   align-items: flex-start;
   justify-content: center;
   flex-direction: column;
+  padding-left: 32px;
   @media screen and (min-width : 700px){
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
-    //row-gap: 1100px;
     padding-left: 10px;
+    //row-gap: 1100px;
+    
     .site__header__titre{
       display: flex;
       flex-direction: row;
       
       justify-content: space-between;
       align-items: center;
+      
     }
    
       
@@ -40,6 +43,7 @@
       @media screen and (max-width : 699px){
       display: flex;
       justify-content: center;
+      
       // margin: auto;
       // padding: 0;
       
@@ -65,8 +69,8 @@
 .header__titre {
      font-size: clamp(1.5rem, 1vw, 6rem);
     font-family: $font__titre;
-    @media screen and (max-width:700px){
-      // margin: 50px;
+    @media screen and (min-width:700px){
+      margin: 50px;
     }
 
    
