--- a/sass/animation/_baspage.scss
+++ b/sass/animation/_baspage.scss
@@ -2,8 +2,8 @@
 .site__footer .wp-block-social-link {
     animation: animHotel 3s infinite;
 }
-#block-15 li{
-animation: animAvion 3s infinite;
+#block-15  :nth-child(2){
+animation: facebook 3s infinite;
 }
 
 
@@ -18,7 +18,7 @@ animation: animAvion 3s infinite;
         transform: rotateX(360deg);
     }
 }
-@keyframes animAvion {
+@keyframes facebook {
     from {
         transform: translateY(-5vh) scale(0.90, 1.1);
         animation-timing-function: cubic-bezier(0.725, 0, 1, 0.685);
