--- a/sass/composantes/_footer.scss
+++ b/sass/composantes/_footer.scss
@@ -30,6 +30,7 @@
         #pied_page_colonne_1{
           display: flex;
           flex-direction: column;
+          align-items: center;
 
           #block-7,#block-10{
             width: 70px;
