--- a/sass/composantes/_recherche.scss
+++ b/sass/composantes/_recherche.scss
@@ -5,9 +5,10 @@
     &__text {
         border : none;
         outline: none;
-        background-color: rgba(#fff, .1);
-        transition : background-color .5s;
         width : 100%;
+        background-color: rgba($color: #c7c7c7, $alpha: 1.0);
+        animation: zoneRecherche 5s infinite ;
+        
         &:focus {
             background-color: rgba(#fff, .3);
         }
