--- a/sass/composantes/_footer.scss
+++ b/sass/composantes/_footer.scss
@@ -17,13 +17,15 @@
       border : 1px solid #aaa;
       flex : 0 0 30%;
       width: 20vw;
+      padding-top: 10px ;
       
       
     }
     // .footer__adresse{ // .site__footer__colonne  .footer__adresse
       .footer__adresse{
         display: flex;
-        justify-content: center;
+        justify-content: flex-start;
+        
         align-items: center;
         padding-left: 12px;
         padding-right: 12px;
@@ -54,7 +56,12 @@
       justify-content: center;
       gap: 2rem;
     }
-    .footer__lien{}
+    .footer__lien{
+      #block-20{
+        padding-left: 25px;
+        padding-right: 25px;
+      }
+    }
   }
   &__ligne{
     display:flex;
