--- a/style.css
+++ b/style.css
@@ -663,11 +663,12 @@ COMPOSANTES
   border: 1px solid #aaa;
   flex: 0 0 30%;
   width: 20vw;
+  padding-top: 10px;
 }
 
 .site__footer__colonne .footer__adresse {
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   padding-left: 12px;
   padding-right: 12px;
@@ -688,6 +689,11 @@ COMPOSANTES
   flex-direction: row;
   justify-content: center;
   gap: 2rem;
+}
+
+.site__footer__colonne .footer__lien #block-20 {
+  padding-left: 25px;
+  padding-right: 25px;
 }
 
 .site__footer__ligne {
