--- a/style.css
+++ b/style.css
@@ -660,7 +660,7 @@ COMPOSANTES
 .site__footer__colonne section {
   display: flex;
   flex-direction: column;
-  border: 1px solid #aaa;
+  background-color: rgba(97, 97, 97, 0.829);
   flex: 0 0 30%;
   width: 20vw;
   padding-top: 10px;
