--- a/sass/composantes/_navigation_categorie_cours.scss
+++ b/sass/composantes/_navigation_categorie_cours.scss
@@ -9,11 +9,16 @@ Navigation pour la page category.php   boutons de catégorie  groupe-1
         list-style-type: none;
      
         .menu-item { //li
-           
+           display: flex;
+           flex-direction: column;
+           row-gap: 20px;
             margin : 0 15px;
+            background-color:lightgray ;
+            border-radius: 50%;
 
              a {
                  text-decoration: none;
+                 margin: 10px;
              }
         }
 
