--- a/style.css
+++ b/style.css
@@ -643,6 +643,28 @@ COMPOSANTES
   }
 }
 
+/* --------------------------------------------------------------
+Navigation pour la page category.php   boutons de catégorie  groupe-1
+----------------------------------------------------------------- */
+.menu-categorie_cours-container .menu {
+  display: flex;
+  list-style-type: none;
+}
+
+.menu-categorie_cours-container .menu .menu-item {
+  display: flex;
+  flex-direction: column;
+  row-gap: 20px;
+  margin: 0 15px;
+  background-color: lightgray;
+  border-radius: 50%;
+}
+
+.menu-categorie_cours-container .menu .menu-item a {
+  text-decoration: none;
+  margin: 10px;
+}
+
 .site__footer {
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
   background-color: #07143b;
