--- a/sass/composantes/_navigation_categorie_cours.scss
+++ b/sass/composantes/_navigation_categorie_cours.scss
@@ -7,14 +7,20 @@ Navigation pour la page category.php   boutons de catégorie  groupe-1
     .menu {  //ul
         display : flex;
         list-style-type: none;
+        flex-wrap: wrap;
      
         .menu-item { //li
            display: flex;
            flex-direction: column;
-           row-gap: 20px;
-            margin : 0 15px;
+            
+            margin : 0 15px 15px 0;
             background-color:lightgray ;
             border-radius: 50%;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            width: 65px;
+            
 
              a {
                  text-decoration: none;
