--- a/style.css
+++ b/style.css
@@ -433,7 +433,25 @@ COMPOSANTES
   flex-wrap: wrap;
 }
 
+.formation__liste .web {
+  background-image: url("https://s2.svgbox.net/octicons.svg?ic=globe-bold");
+}
+
+.formation__liste .jeux-video {
+  background-image: url("https://s2.svgbox.net/materialui.svg?ic=games");
+}
+
+.formation__liste .utilitaire {
+  background-image: url("https://s2.svgbox.net/octicons.svg?ic=tools-bold");
+}
+
+.formation__liste .creation-video {
+  background-image: url("https://s2.svgbox.net/octicons.svg?ic=device-camera-video");
+}
+
 .formation__cours {
+  background-repeat: no-repeat;
+  background-position: 95% 5%;
   background-color: #d1e9ff;
   box-shadow: #394044 1px -1px 10px;
   border-radius: 5px;
@@ -649,15 +667,19 @@ Navigation pour la page category.php   boutons de catégorie  groupe-1
 .menu-categorie_cours-container .menu {
   display: flex;
   list-style-type: none;
+  flex-wrap: wrap;
 }
 
 .menu-categorie_cours-container .menu .menu-item {
   display: flex;
   flex-direction: column;
-  row-gap: 20px;
-  margin: 0 15px;
+  margin: 0 15px 15px 0;
   background-color: lightgray;
   border-radius: 50%;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  width: 65px;
 }
 
 .menu-categorie_cours-container .menu .menu-item a {
