--- a/sass/composantes/_contenu.scss
+++ b/sass/composantes/_contenu.scss
@@ -20,6 +20,23 @@
     &__liste {
         display: flex;
         flex-wrap: wrap;
+        .web{
+            background-image: url('https://s2.svgbox.net/octicons.svg?ic=globe-bold');
+        }
+        .jeux-video{
+            background-image: url('https://s2.svgbox.net/materialui.svg?ic=games');
+
+        }
+
+        .utilitaire{
+            //background-image: url('https://s2.svgbox.net/octicons.svg?ic=device-camera-video');
+
+            background-image: url('https://s2.svgbox.net/octicons.svg?ic=tools-bold');
+        }
+        .creation-video {
+            background-image: url('https://s2.svgbox.net/octicons.svg?ic=device-camera-video');
+
+        }
     }
     
     &__cours {
