mettre tri et ordre

--- a/sass/composantes/_contenu.scss
+++ b/sass/composantes/_contenu.scss
@@ -46,6 +46,8 @@
         margin: 10px;
         display: flex;
         flex-direction: column;
+        background-repeat: no-repeat;
+        background-position: 95% 5% ;
         
         img{
             align-self: center;
