--- a/sass/style.scss
+++ b/sass/style.scss
@@ -39,6 +39,8 @@ COMPOSANTES
 @import "composantes/erreur_404";
 @import "composantes/recherche";
 @import "composantes/single-post";
+@import "composantes/menu-accueil";
+
 
 /* ---------------------------------------------------------
 ANIMATION
