--- a/sass/variables/_couleurs.scss
+++ b/sass/variables/_couleurs.scss
@@ -29,5 +29,8 @@ $color__font-header : rgb(4, 6, 41);
 $color__font-main :rgb(235, 202, 193);
 $color__font-barre : rgb(255, 255, 255);
 $color__font-footer : rgb(241, 242, 248);
+// boutons
+$color__button__backgroung--hover:rgb(255, 252, 88);
+$color__button__backgroung--current:rgb(106, 188, 255);
 
 
