--- a/style.css
+++ b/style.css
@@ -668,6 +668,8 @@ Navigation pour la page category.php   boutons de catégorie  groupe-1
   display: flex;
   list-style-type: none;
   flex-wrap: wrap;
+  justify-items: center;
+  align-items: center;
 }
 
 .menu-categorie_cours-container .menu .menu-item {
@@ -680,11 +682,30 @@ Navigation pour la page category.php   boutons de catégorie  groupe-1
   align-items: center;
   text-align: center;
   width: 65px;
+  height: 70px;
+}
+
+.menu-categorie_cours-container .menu .menu-item:first-child {
+  height: 300px;
+  width: 150px;
 }
 
 .menu-categorie_cours-container .menu .menu-item a {
   text-decoration: none;
   margin: 10px;
+}
+
+.menu-categorie_cours-container .menu .menu-item:hover {
+  background-color: #415f77;
+}
+
+.menu-categorie_cours-container .menu .menu-item:hover a {
+  text-decoration: none;
+  margin: 10px;
+}
+
+.menu-categorie_cours-container .menu .current-menu-item {
+  background-color: #415f77;
 }
 
 .site__footer {
@@ -863,6 +884,22 @@ Navigation pour la page category.php   boutons de catégorie  groupe-1
   padding: 0;
   margin: 0;
   column-gap: 50px;
+}
+
+.menu-accueil-container .menu .accueil__prof .menu-item-icone {
+  background-image: url("https://s2.svgbox.net/octicons.svg?ic=octoface");
+}
+
+.menu-accueil-container .menu .accueil__aide .menu-item-icone {
+  background-image: url("https://s2.svgbox.net/octicons.svg?ic=bug-bold");
+}
+
+.menu-accueil-container .menu .accueil__etudiant .menu-item-icone {
+  background-image: url("https://s2.svgbox.net/octicons.svg?ic=mortar-board-bold");
+}
+
+.menu-accueil-container .menu .menu-item-description {
+  font-size: 0.5rem;
 }
 
 .menu-accueil-container .menu li {
