améliorer footer et mettre autre page

--- a/sass/composantes/_footer.scss
+++ b/sass/composantes/_footer.scss
@@ -59,6 +59,7 @@
     }
     .footer__lien{
       #block-20{
+        display: none;
         padding-left: 25px;
         padding-right: 25px;
       }
