--- a/style.css
+++ b/style.css
@@ -757,6 +757,7 @@ Navigation pour la page category.php   boutons de catégorie  groupe-1
 }
 
 .site__footer__colonne .footer__lien #block-20 {
+  display: none;
   padding-left: 25px;
   padding-right: 25px;
 }
@@ -917,6 +918,55 @@ Navigation pour la page category.php   boutons de catégorie  groupe-1
 }
 
 .menu-accueil-container .menu li a {
+  text-decoration: none;
+}
+
+.menu-accueil_evenement-container {
+  margin-top: 20px;
+}
+
+.menu-accueil_evenement-container .menu {
+  display: flex;
+  list-style-type: none;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  height: auto;
+  padding: 0;
+  margin: 0;
+  column-gap: 50px;
+}
+
+.menu-accueil_evenement-container .menu .accueil__prof .menu-item-icone {
+  background-image: url("https://s2.svgbox.net/octicons.svg?ic=octoface");
+}
+
+.menu-accueil_evenement-container .menu .accueil__aide .menu-item-icone {
+  background-image: url("https://s2.svgbox.net/octicons.svg?ic=bug-bold");
+}
+
+.menu-accueil_evenement-container .menu .accueil__etudiant .menu-item-icone {
+  background-image: url("https://s2.svgbox.net/octicons.svg?ic=mortar-board-bold");
+}
+
+.menu-accueil_evenement-container .menu .menu-item-description {
+  font-size: 0.5rem;
+}
+
+.menu-accueil_evenement-container .menu li {
+  display: flex;
+  flex-direction: column;
+  background-color: lightgray;
+  border-radius: 10%;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  width: 5em;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-size: 1em;
+  height: 5em;
+}
+
+.menu-accueil_evenement-container .menu li a {
   text-decoration: none;
 }
 
