--- a/sass/composantes/_boite_modale.scss
+++ b/sass/composantes/_boite_modale.scss
@@ -6,6 +6,13 @@
     left: 23%;
     border: 5px solid black;
     background-color: red;
+    transform: scale(0.1);
+    transition: all 1s ease-out;
+    &:hover{
+        transform: scale(1);
+
+
+    }
 
     .boite__modale__texte{
       
