--- a/style.css
+++ b/style.css
@@ -956,6 +956,22 @@ Navigation pour la page category.php   boutons de catégorie  groupe-1
   text-decoration: none;
 }
 
+.boite__modale {
+  position: absolute;
+  width: 50%;
+  height: 50%;
+  top: 25%;
+  left: 23%;
+  border: 5px solid black;
+  background-color: red;
+  transform: scale(0.1);
+  transition: all 1s ease-out;
+}
+
+.boite__modale:hover {
+  transform: scale(1);
+}
+
 /* ---------------------------------------------------------
 ANIMATION
 --------------------------------------------------------- */
