--- a/sass/style.scss
+++ b/sass/style.scss
@@ -40,7 +40,7 @@ COMPOSANTES
 @import "composantes/recherche";
 @import "composantes/single-post";
 @import "composantes/menu-accueil";
-@import "composantes/boite_modale";
+@import "composantes/modale";
 
 
 /* ---------------------------------------------------------
