--- a/style.css
+++ b/style.css
@@ -597,7 +597,7 @@ COMPOSANTES
   margin-bottom: 10px;
 }
 
-#burger {
+.burger {
   position: absolute;
   transition: transform .3s;
   transform: rotate(0);
@@ -608,7 +608,7 @@ COMPOSANTES
   display: none;
 }
 
-#chk-burger:checked ~ #burger {
+#chk-burger:checked ~ .burger {
   transform: rotate(90deg);
 }
 
@@ -647,13 +647,13 @@ COMPOSANTES
 }
 
 @media screen and (min-width: 700px) {
-  .site #burger {
+  .site .burger {
     display: none;
   }
   .site .menu-principale-container {
     display: block;
   }
-  .home #burger {
+  .home .burger {
     display: block;
     z-index: 1;
   }
@@ -999,6 +999,83 @@ Navigation pour la page category.php   boutons de catégorie  groupe-1
   background-color: red;
 }
 
+.evenement {
+  padding-left: 60px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+}
+
+.evenement h1 {
+  width: 100%;
+  margin-bottom: 25px;
+}
+
+.evenement h3 {
+  font-size: 1.5rem;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+.evenement .evenement__image {
+  width: 100%;
+}
+
+.evenement .evenement__image img {
+  max-width: 1000px;
+  max-width: 500px;
+}
+
+.evenement .evenement__resume {
+  width: 100%;
+}
+
+.evenement .evenement__organisateur {
+  width: 100%;
+  margin-bottom: 50px;
+}
+
+.evenement .evenement__date {
+  width: 15%;
+  border: 3px solid black;
+}
+
+.evenement .evenement__date .date {
+  padding-left: 5px;
+}
+
+.evenement .evenement__date h3 {
+  padding-left: 5px;
+}
+
+.evenement .evenement__heure {
+  width: 15%;
+  border: 3px solid black;
+  border-left: none;
+}
+
+.evenement .evenement__heure .heure {
+  padding-left: 5px;
+}
+
+.evenement .evenement__heure h3 {
+  padding-left: 5px;
+}
+
+.evenement .evenement__endroit {
+  max-width: 60%;
+  border: 3px solid black;
+  border-left: none;
+}
+
+.evenement .evenement__endroit .endroit {
+  padding-left: 5px;
+}
+
+.evenement .evenement__endroit h3 {
+  padding-left: 5px;
+}
+
 /* ---------------------------------------------------------
 ANIMATION
 --------------------------------------------------------- */
@@ -1117,6 +1194,55 @@ ANIMATION
   to {
     transform: translateY(7vh) scale(1.3, 0.7);
   }
+}
+
+.burger {
+  position: relative;
+  width: 3rem;
+  height: 3rem;
+  background-color: white;
+}
+
+.burger__ligne {
+  position: absolute;
+  background-color: black;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  transition: all 1s ease-in-out;
+}
+
+.burger__ligne:nth-of-type(1) {
+  clip-path: polygon(0 0, 100% 0, 100% 20%, 0 20%);
+}
+
+.burger__ligne:nth-of-type(2) {
+  clip-path: polygon(0 40%, 100% 40%, 100% 60%, 0 60%);
+}
+
+.burger__ligne:nth-of-type(3) {
+  clip-path: polygon(0 80%, 100% 80%, 100% 100%, 0 100%);
+}
+
+.burger__x {
+  position: relative;
+  width: 3rem;
+  height: 3rem;
+  background-color: white;
+}
+
+.burger__x__ligne:nth-of-type(1) {
+  clip-path: polygon(7.1% -7.1%, 107.1% 92.9%, 92.9% 107.1%, -7.1% 7.1%);
+}
+
+.burger__x__ligne:nth-of-type(2) {
+  clip-path: polygon(40% 40%, 40% 40%, 60% 60%, 60% 60%);
+  opacity: 0;
+}
+
+.burger__x__ligne:nth-of-type(3) {
+  clip-path: polygon(-7.1% 92.9%, 92.9% -7.1%, 107.1% 7.1%, 77.1% 107.1%);
 }
 
 /* ---------------------------------------------------------
