--- a/style.css
+++ b/style.css
@@ -1005,6 +1005,8 @@ Navigation pour la page category.php   boutons de catégorie  groupe-1
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: flex-start;
+  padding-bottom: 20px;
+  font-size: 1.2rem;
 }
 
 .evenement h1 {
@@ -1030,6 +1032,10 @@ Navigation pour la page category.php   boutons de catégorie  groupe-1
   width: 100%;
 }
 
+.evenement .evenement__resume .resume {
+  max-width: 90%;
+}
+
 .evenement .evenement__organisateur {
   width: 100%;
   margin-bottom: 50px;
@@ -1038,6 +1044,9 @@ Navigation pour la page category.php   boutons de catégorie  groupe-1
 .evenement .evenement__date {
   width: 15%;
   border: 3px solid black;
+  background-color: rgba(57, 144, 170, 0.548);
+  box-shadow: 5px 10px 5px gray;
+  min-width: 75px;
 }
 
 .evenement .evenement__date .date {
@@ -1052,6 +1061,9 @@ Navigation pour la page category.php   boutons de catégorie  groupe-1
   width: 15%;
   border: 3px solid black;
   border-left: none;
+  background-color: rgba(57, 144, 170, 0.548);
+  box-shadow: 5px 10px 5px gray;
+  min-width: 85px;
 }
 
 .evenement .evenement__heure .heure {
@@ -1063,13 +1075,17 @@ Navigation pour la page category.php   boutons de catégorie  groupe-1
 }
 
 .evenement .evenement__endroit {
-  max-width: 60%;
+  width: 60%;
+  min-width: 50px;
   border: 3px solid black;
   border-left: none;
+  background-color: rgba(57, 144, 170, 0.548);
+  box-shadow: 5px 10px 5px gray;
 }
 
 .evenement .evenement__endroit .endroit {
   padding-left: 5px;
+  padding-right: 5px;
 }
 
 .evenement .evenement__endroit h3 {
